--- a/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
+++ b/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
@@ -51,8 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="Downloader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sender.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
