--- a/CsharpBot/CROCK_CsharpBot/App.config
+++ b/CsharpBot/CROCK_CsharpBot/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CROCK_CsharpBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
@@ -11,4 +16,11 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <CROCK_CsharpBot.Properties.Settings>
+      <setting name="Token" serializeAs="String">
+        <value>1322961991:AAEqbpx7E4TlC7Wont1yjOhdpveip0PCvO0</value>
+      </setting>
+    </CROCK_CsharpBot.Properties.Settings>
+  </applicationSettings>
 </configuration>
