--- a/CsharpBot/CROCK_CsharpBot/nlog.config
+++ b/CsharpBot/CROCK_CsharpBot/nlog.config
@@ -28,6 +28,6 @@
 	<rules>
 		<logger name="*" minlevel="Trace" writeTo="logfile" />
 		<logger name="*" minlevel="Trace" writeTo="console" />
-		<logger name="*" minlevel="Info"  writeTo="eventlog" />
+		<logger name="*" minlevel="Error"  writeTo="eventlog" />
 	</rules>
 </nlog>
