--- a/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
+++ b/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.7.5\lib\net45\NLog.dll</HintPath>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
