Добавлена сериализация и десериализация, атрибуты, метапрограммирование.

--- a/CsharpBot/CROCK_CsharpBot/App.config
+++ b/CsharpBot/CROCK_CsharpBot/App.config
@@ -21,6 +21,9 @@
       <setting name="Token" serializeAs="String">
         <value>1322961991:AAEqbpx7E4TlC7Wont1yjOhdpveip0PCvO0</value>
       </setting>
+      <setting name="FileName" serializeAs="String">
+        <value>C:\botstate.xml</value>
+      </setting>
     </CROCK_CsharpBot.Properties.Settings>
   </applicationSettings>
 </configuration>
