--- a/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
+++ b/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
@@ -60,7 +60,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bot.cs" />
+    <Compile Include="BotState.cs" />
+    <Compile Include="Comand.cs" />
     <Compile Include="Downloader.cs" />
+    <Compile Include="EnumExtenders.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -69,6 +72,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Sender.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
