Добавлены папки под сохранённые на сервере документы. Теперь Рефлектор дожидается завершения ассинхронных методов. Добавлен запуск в режиме сервиса (пока не рабочий, стоит разобраться почему. Возможно, проблема в установщике), его установщик и uninstall'ер

--- a/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
+++ b/CsharpBot/CROCK_CsharpBot/CROCK_CsharpBot.csproj
@@ -100,6 +100,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="BotService.resx">
+      <DependentUpon>BotService.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ProjectInstaller.resx">
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </EmbeddedResource>
