--- a/CsharpBot/CROCK_CsharpBot/App.config
+++ b/CsharpBot/CROCK_CsharpBot/App.config
@@ -4,6 +4,9 @@
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="CROCK_CsharpBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="CROCK_CsharpBot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
@@ -26,4 +29,14 @@
       </setting>
     </CROCK_CsharpBot.Properties.Settings>
   </applicationSettings>
+  <userSettings>
+    <CROCK_CsharpBot.Properties.Settings>
+      <setting name="SavedPhotoDir" serializeAs="String">
+        <value>Photos</value>
+      </setting>
+      <setting name="SavedDocumentDir" serializeAs="String">
+        <value>Documents</value>
+      </setting>
+    </CROCK_CsharpBot.Properties.Settings>
+  </userSettings>
 </configuration>
