--- a/CsharpBot/CROCK_CsharpBot/Properties/Settings.settings
+++ b/CsharpBot/CROCK_CsharpBot/Properties/Settings.settings
@@ -8,5 +8,11 @@
     <Setting Name="FileName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">C:\botstate.xml</Value>
     </Setting>
+    <Setting Name="SavedPhotoDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Photos</Value>
+    </Setting>
+    <Setting Name="SavedDocumentDir" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Documents</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
