--- a/CsharpBot/CROCK_CsharpBot/nlog.config
+++ b/CsharpBot/CROCK_CsharpBot/nlog.config
@@ -21,7 +21,7 @@
 				layout="${message} ${exception:format=toString}"
 				eventId="${event-properties:EventID:whenEmpty=0}"
 				machineName="."
-				source="CrocPinBot"
+				source="BotService"
 				log="Application"
             />
 	</targets>
