Добавлен класс Dir с методом MkDir, с помощью которого можно более систематично хранить логи и контакты

--- a/CsharpBot/CROCK_CsharpBot/App.config
+++ b/CsharpBot/CROCK_CsharpBot/App.config
@@ -25,7 +25,7 @@
         <value>1322961991:AAEqbpx7E4TlC7Wont1yjOhdpveip0PCvO0</value>
       </setting>
       <setting name="FileName" serializeAs="String">
-        <value>C:\botstate.xml</value>
+        <value>C:\CrocBot\BotState\botstate.xml</value>
       </setting>
     </CROCK_CsharpBot.Properties.Settings>
   </applicationSettings>
