--- a/CsharpBot/CROCK_CsharpBot/Properties/Settings.settings
+++ b/CsharpBot/CROCK_CsharpBot/Properties/Settings.settings
@@ -6,7 +6,7 @@
       <Value Profile="(Default)">1322961991:AAEqbpx7E4TlC7Wont1yjOhdpveip0PCvO0</Value>
     </Setting>
     <Setting Name="FileName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\botstate.xml</Value>
+      <Value Profile="(Default)">C:\CrocBot\BotState\botstate.xml</Value>
     </Setting>
     <Setting Name="SavedPhotoDir" Type="System.String" Scope="User">
       <Value Profile="(Default)">Photos</Value>
