--- a/CsharpBot/CROCK_CsharpBot/nlog.config
+++ b/CsharpBot/CROCK_CsharpBot/nlog.config
@@ -5,7 +5,7 @@
       throwExceptions="true">
 	<targets>
 		<!-- Не более 100 файлов размером не более 1М, итого максимум 100М на журналы -->
-		<target name="logfile" xsi:type="File" fileName="\BOT\LOG\${shortdate}.txt"
+		<target name="logfile" xsi:type="File" fileName="\CrocBOT\LOG\${shortdate}.txt"
 				layout="${longdate} ; ${uppercase:${level}} ; ${message} ${exception:format=toString}"
 				concurrentWrites="true"
 				keepFileOpen="false"
